Added logs and simplified the API's